test/errors/pc_overflow.asm
; should result in PC overflow error
    org $fffe
    fdb $ffff
    